--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ body {
     background-color: red;
     border-radius: 15px;
     padding: 1rem;
+    text-align: center;
 }
 
 .group-item  a{
@@ -43,6 +44,8 @@ body {
     color: white;
     font-weight: 600;
     text-decoration: none;
+    font-size: 1rem;
+    
 }
 
 .logo-section {
@@ -129,3 +132,12 @@ td, th {
         max-width: 95%;
     }
 }
+
+@media only screen and (max-width: 450px) {
+    .nav-group {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 1rem;
+    }
+}
+
