--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,20 @@ body {
     text-align: center;
 }
 
+.pdf-button {
+    background-color: rgb(255, 166, 0);
+    padding: 1rem 1rem;
+    margin: 3rem 0rem;
+    text-align: center;
+    font-weight: 600;
+    border-radius: 15px;    
+}
+
+.pdf-button a {
+    color: black;
+    text-decoration: none;
+}
+
 .group-item  a{
     list-style: none;
     color: white;
@@ -120,6 +134,17 @@ td, th {
     padding: 6px;
     text-align: center;
     
+}
+
+.footer {
+    background-color: red;
+    text-align: center;
+    padding: 2rem;
+}
+
+.footer p {
+    color: white;
+    font-weight: 600;
 }
 
 @media only screen and (max-width: 1000px) {
